[#10] add macos-build
 - also disable previews for now