@@ -205,7 +205,6 @@
           </annotationProcessorPaths>
           <compilerArgs>
             <compilerArg>-Aproject=${project.groupId}/${project.artifactId}</compilerArg>
-            <compilerArg>--enable-preview</compilerArg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -315,9 +314,6 @@
                   <launcher>
                     memeforcehunt=memeforcehunt.app/io.github.alttpj.memeforcehunt.app.cli.MemeforceHuntApp
                   </launcher>
-                  <addOptions>
-                    <addOption>--enable-preview</addOption>
-                  </addOptions>
                   <modulePaths>
                     <modulePath>${project.build.directory}/modules</modulePath>
                   </modulePaths>
